--- a/pluto/src/select/Single.css
+++ b/pluto/src/select/Single.css
@@ -19,13 +19,6 @@
 .pluto-select-dialog-content {
     width: 500px;
     height: 200px;
-
-    .pluto-input__internal {
-        border-top-left-radius: 1rem;
-        border-top-right-radius: 1rem;
-        border-bottom-left-radius: 0;
-        border-bottom-right-radius: 0;
-    }
 }
 
 .pluto-select__clear {
